fix alignment for error text

--- a/client/src/pages/Signup/index.module.scss
+++ b/client/src/pages/Signup/index.module.scss
@@ -28,8 +28,9 @@
     grid-row: 1;
   }
   .signupRight {
-    display: grid;
-    grid-row: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 0 10px 10px 0;
     position: relative;
     background: linear-gradient(
@@ -38,21 +39,16 @@
       rgb(216, 85, 45) 100%
     );
     .formLabel {
-      
+      display: none;
       font-size: 0.8rem;
       margin-top: auto;
       margin-bottom: auto;
       color: #fff;
       width: 40%;
-      
     }
   }
 
   .form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     display: flex;
@@ -62,44 +58,36 @@
     h1 {
       margin-top: 30px;
       font-size: 1rem;
-   
       width: 80%;
       margin-bottom: 2rem;
       color: #fff;
       text-align: center;
     }
+    > span {
+      margin-top: 1rem;
+    }
     .formInputs {
-      margin-bottom: 0.5rem;
-      width: 90%;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto 0.5rem auto;
       display: flex;
-      
-      
+      flex-direction: column;
+      width: 70%;
+      max-width: 500px;
 
-      p {
-        
-        font-size: 0.7rem;
-        
-        color: black;
-
-        &:before { 
-          content: '\a'; 
-          white-space: pre; }
+      > div {
+        margin-bottom: 0.1rem;
       }
 
-      
-
+      p {
+        font-size: 0.7rem;
+        margin: 0;
+        color: black;
+      }
     }
   }
 
   .formImg {
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
   }
 }
 
@@ -114,17 +102,15 @@
     padding: 0.5rem;
     display: flex;
     justify-self: flex-end;
-    display:block;
-    min-width: 200px;
-   
- 
+    display: block;
+    min-width: 250px;
   }
 }
 
 @media (min-width: 1024px) {
   .signupContainer {
     margin: 50px auto;
-    width: 1000px;
+    width: 95%;
     box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
     position: relative;
     border-radius: 10px;
@@ -147,9 +133,7 @@
     }
 
     .signupRight {
-      display: grid;
-      grid-column: 2;
-      grid-row: 1;
+      display: flex;
       border-radius: 0 10px 10px 0;
       position: relative;
       background: linear-gradient(
@@ -159,16 +143,10 @@
       );
 
       .formLabel {
-       
         width: 100px;
-       
       }
     }
     .form {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
       width: 90%;
       height: 100%;
       display: flex;
@@ -177,7 +155,7 @@
       align-items: center;
 
       h1 {
-        margin-top: 30px;
+        margin-top: 0px;
         font-size: 1rem;
         text-align: center;
         width: 80%;
@@ -185,12 +163,15 @@
         color: #fff;
       }
       .formInputs {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         width: 80%;
         margin-left: auto;
         margin-right: auto;
         display: flex;
         justify-content: center;
+        p {
+          margin-top: 0.2rem;
+        }
       }
     }
     .formImg {
